--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,2 @@
 PORT=3999
-DB_URI=mysql://root:isipassword@localhost:3306/express_mysql
+DB_URI=mysql://root:isipassword@localhost:3306/express_mysql_prisma
