add prisma profile

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
 PORT=3999
-DB_URI=mysql://root:isipassword@localhost:3306/express_mysql_prisma
+DB_URI=mysql://root:isipassword@localhost:3306/terraceofdream
 
 # This was inserted by `prisma init`:
 # Environment variables declared in this file are automatically made available to Prisma.
@@ -7,4 +7,4 @@ DB_URI=mysql://root:isipassword@localhost:3306/express_mysql_prisma
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
-DATABASE_URL="mysql://root:isipassword@localhost:3306/express_mysql_prisma"
+DATABASE_URL="mysql://root:isipassword@localhost:3306/terraceofdream"
